@@ -25,6 +25,7 @@ The following bugs are resolved with this release:
   [24880] login: Use struct flock64 in utmp
   [24986] alpha: new getegid, geteuid and getppid syscalls used
     unconditionally
+  [24899] login: Add nonstring attributes to struct utmp, struct utmpx
   [24902] login: pututxline could fail to overwrite existing entries
   [25189] Don't use a custom wrapper macro around __has_include
   [25203] libio: Disable vtable validation for pre-2.1 interposed handles
